Added e2e test in git action and filter

--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   deno:
+    if: github.repository == 'slack-samples/deno-hello-world'
     runs-on: ubuntu-latest
     timeout-minutes: 5
 
