--- a/.github/workflows/udd-update-dependencies.yml
+++ b/.github/workflows/udd-update-dependencies.yml
@@ -5,6 +5,7 @@ on:
 
 jobs:
   update-dependencies:
+    if: github.repository == 'slack-samples/deno-hello-world'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
