--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -29,3 +29,6 @@ jobs:
 
       - name: Run tests
         run: deno test
+
+      - name: Run type check
+        run: deno check *.ts && deno check **/*.ts
