--- a/deno.jsonc
+++ b/deno.jsonc
@@ -27,7 +27,7 @@
   },
   "lock": false,
   "tasks": {
-    "test": "deno fmt --check && deno lint && deno test --allow-read --allow-none"
+    "test": "deno fmt --check && deno lint && deno test --allow-read"
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@^1.0.13",
